--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-styleguidist": "^3.8.2",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.5.21",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.2"
   },
   "homepage": "https://github.com/Commbocc/hcflgov-vue-html-wrapper",
   "license": "MIT",
