--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name HcHtmlWrapper --formats umd-min",
-    "build-demo": "vue-cli-service build --dest demo",
+    "lint": "vue-cli-service lint",
     "build-all": "npm run build && npm run build-demo && npm run styleguide:build",
+    "build-demo": "vue-cli-service build --dest demo",
     "styleguide": "vue-cli-service styleguidist",
     "styleguide:build": "vue-cli-service styleguidist:build"
   },
+  "main": "dist/HcHtmlWrapper.umd.min.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.0",
     "axios": "^0.18.0",
@@ -22,7 +24,11 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.1",
+    "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-service": "^3.5.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
@@ -35,6 +41,5 @@
   },
   "homepage": "https://github.com/Commbocc/hcflgov-vue-html-wrapper",
   "license": "MIT",
-  "main": "dist/HcHtmlWrapper.umd.min.js",
   "style": "dist/HcHtmlWrapper.css"
 }
